--- a/UnofficialCrusaderPatchGUI/Views/Controls/Troops/Control_u_arabxbow.xaml
+++ b/UnofficialCrusaderPatchGUI/Views/Controls/Troops/Control_u_arabxbow.xaml
@@ -10,6 +10,6 @@
         <Expander.Header>
             <CheckBox Content="{DynamicResource u_ArabXBow}" x:Name="u_arabxbow"/>
         </Expander.Header>
-        <TextBlock Text="{DynamicResource u_arabxbow_descr}" TextWrapping="WrapWithOverflow" />
+        <TextBlock Text="{DynamicResource u_arabxbow_descr}" TextWrapping="WrapWithOverflow" Margin="20 10 10 0" Background="#7FC8C8C8"/>
     </Expander>
 </UserControl>
