--- a/UnofficialCrusaderPatchGUI/Views/Controls/AILords/Control_ai_attackwave.xaml
+++ b/UnofficialCrusaderPatchGUI/Views/Controls/AILords/Control_ai_attackwave.xaml
@@ -10,6 +10,6 @@
         <Expander.Header>
             <CheckBox Content="{DynamicResource ai_attackwave}" x:Name="ai_attackwave"/>
         </Expander.Header>
-        <TextBlock Text="{DynamicResource ai_attackwave_descr}" TextWrapping="WrapWithOverflow" />
+        <TextBlock Text="{DynamicResource ai_attackwave_descr}" TextWrapping="WrapWithOverflow" Margin="20 10 10 0" Background="#7FC8C8C8"/>
     </Expander>
 </UserControl>
