--- a/UnofficialCrusaderPatchGUI/Views/Controls/Bugfixes/Control_ai_buywood.xaml
+++ b/UnofficialCrusaderPatchGUI/Views/Controls/Bugfixes/Control_ai_buywood.xaml
@@ -10,6 +10,6 @@
         <Expander.Header>
             <CheckBox Content="{DynamicResource ai_buywood}" x:Name="ai_buywood"/>
         </Expander.Header>
-        <TextBlock Text="{DynamicResource ai_buywood_descr}" TextWrapping="WrapWithOverflow" />
+        <TextBlock Text="{DynamicResource ai_buywood_descr}" TextWrapping="WrapWithOverflow" Margin="20 10 10 0" Background="#7FC8C8C8"/>
     </Expander>
 </UserControl>
