--- a/UnofficialCrusaderPatchGUI/Views/Controls/Bugfixes/Control_ai_towerengines.xaml
+++ b/UnofficialCrusaderPatchGUI/Views/Controls/Bugfixes/Control_ai_towerengines.xaml
@@ -10,6 +10,6 @@
         <Expander.Header>
             <CheckBox Content="{DynamicResource ai_towerengines}" x:Name="ai_towerengines"/>
         </Expander.Header>
-        <TextBlock Text="{DynamicResource ai_towerengines_descr}" TextWrapping="WrapWithOverflow" />
+        <TextBlock Text="{DynamicResource ai_towerengines_descr}" TextWrapping="WrapWithOverflow" Margin="20 10 10 0" Background="#7FC8C8C8"/>
     </Expander>
 </UserControl>
