--- a/UnofficialCrusaderPatchGUI/Views/Controls/Other/Control_o_keys.xaml
+++ b/UnofficialCrusaderPatchGUI/Views/Controls/Other/Control_o_keys.xaml
@@ -10,6 +10,6 @@
         <Expander.Header>
             <CheckBox Content="{DynamicResource o_keys}" x:Name="o_keys"/>
         </Expander.Header>
-        <TextBlock Text="{DynamicResource o_keys_descr}" TextWrapping="WrapWithOverflow" />
+        <TextBlock Text="{DynamicResource o_keys_descr}" TextWrapping="WrapWithOverflow" Margin="20 10 10 0" Background="#7FC8C8C8"/>
     </Expander>
 </UserControl>
