--- a/UnofficialCrusaderPatchGUI/Views/Controls/Troops/Control_u_spearmen.xaml
+++ b/UnofficialCrusaderPatchGUI/Views/Controls/Troops/Control_u_spearmen.xaml
@@ -10,6 +10,6 @@
         <Expander.Header>
             <CheckBox Content="{DynamicResource u_spearmen}" x:Name="u_spearmen"/>
         </Expander.Header>
-        <TextBlock Text="{DynamicResource u_spearmen_descr}" TextWrapping="WrapWithOverflow" />
+        <TextBlock Text="{DynamicResource u_spearmen_descr}" TextWrapping="WrapWithOverflow" Margin="20 10 10 0" Background="#7FC8C8C8"/>
     </Expander>
 </UserControl>
