--- a/UnofficialCrusaderPatchGUI/Views/TabViews/StartTroop.xaml
+++ b/UnofficialCrusaderPatchGUI/Views/TabViews/StartTroop.xaml
@@ -7,5 +7,20 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Loaded="OnLoad">
-    <StackPanel x:Name="StartTroopStackpanel"/>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <ScrollViewer Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+            <StackPanel x:Name="StartTroopStackpanel"/>
+        </ScrollViewer>
+        <Button Grid.Column="1" Grid.Row="1" Height="20" Width="20" Background="#7FC8C8C8" Click="OnRefresh">
+            <Image Source="pack://application:,,,/UnofficialCrusaderPatchGUI;component/Graphics/refresh.png"></Image>
+        </Button>
+    </Grid>
 </UserControl>
