--- a/unofficialcrusaderpatch-gui/src/renderer/scss/app.scss
+++ b/unofficialcrusaderpatch-gui/src/renderer/scss/app.scss
@@ -68,7 +68,7 @@ label {
 #myTabContent {
   overflow-y: scroll;
   height: 300px;
-  background: rgba(255, 255, 255, 0.25);
+  background: dimgray;
   border-radius: 10px;
   padding: 10px;
 }
